# RISC-V-Project

./: .gitattributes  LICENSE  README.md
RTL/: T_core.csv  de10-std.csv
RTL/FPU/: Makefile
RTL/FPU/project/: fpu.qsf  fpu_0.qpf  fpu_nativelink_simulation.rpt
RTL/FPU/project/db/: fpu.(0).cnf.hdb  fpu.(1).cnf.cdb  fpu.(1).cnf.hdb  fpu.asm.qmsg  fpu.asm.rdb  fpu.cbx.xml  fpu.cmp.bpm  fpu.cmp.cdb  fpu.cmp.hdb  fpu.cmp.idb  fpu.cmp.logdb  fpu.cmp.rdb  fpu.db_info  fpu.eda.qmsg  fpu.fit.qmsg  fpu.hier_info  fpu.hif  fpu.lpc.rdb  fpu.map.bpm  fpu.map.cdb  fpu.map.hdb  fpu.map.kpt  fpu.map.qmsg  (+20 more)
RTL/FPU/rtl/: fpu_0.v  fpu_0_tb.v
RTL/FPU/sim/: fpu.cr.mti  transcript
RTL/FPU_fin/: Makefile
RTL/FPU_fin/project/: fadd_s.bsf  fpu.bsf  fpu.qpf  fpu.qsf  fpu.qsf.bak  fpu.qws  fpu_0.qsf  fpu_nativelink_simulation.rpt
RTL/FPU_fin/rtl/: Block1.bdf  fadd_s.v  flw.v  fpu.v  fpu_tb.cpp  fpu_tb.v
RTL/FPU_fin/sim/: dump.vcd  fpu.mpf  vsim.wlf
RTL/RTL_0/: CMakeLists.txt  Makefile  adder2_top_tb.vvp  cmake_install.cmake  fpu_tb.vcd  tb.vcd
RTL/adder/: Makefile  Makefile.am  Makefile.in  adder_tb.v  config.status  configure  configure.ac  run_sim  tb.vcd
RTL/adder/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
RTL/adder_fin/: Makefile  gen_tb.py
RTL/adder_fin/rtl/: adder.v  adder_tb.v
T_core/GNU_MCU_Eclipse/eclipse/: eclipse.ini
T_core/T-Core_v.1.1.2_SystemCD/: Verify.md5  Verify.sfv
T_core/TCORE-RISCV-E203/TRRV-E-SDK/: README.md
T_core/TCORE-RISCV-FreedomE300/: note.txt
T_core/TCORE-RISCV-FreedomE300/freedom-e-sdk/: Makefile  README.md
(+691 files in other folders)
